resolved conflict